syntax = "proto3";

package kong.admin.service.v1;

option go_package = "github.com/kong/koko/internal/gen/kong/admin/service/v1;v1";

import "google/api/annotations.proto";
import "kong/admin/model/v1/consumer.proto";
import "kong/admin/model/v1/cluster.proto";

service ConsumerService {
  rpc GetConsumer(GetConsumerRequest) returns (GetConsumerResponse) {
    option (google.api.http) = {
      get: "/v1/consumers/{id}"
    };
  }
  rpc CreateConsumer(CreateConsumerRequest) returns (CreateConsumerResponse) {
    option (google.api.http) = {
      post: "/v1/consumers"
      body: "item"
    };
  }
  rpc UpsertConsumer(UpsertConsumerRequest) returns (UpsertConsumerResponse) {
    option (google.api.http) = {
      put: "/v1/consumers/{item.id}"
      body: "item"
    };
  }
  rpc DeleteConsumer(DeleteConsumerRequest) returns (DeleteConsumerResponse) {
    option (google.api.http) = {
      delete: "/v1/consumers/{id}"
    };
  }
  rpc ListConsumers(ListConsumersRequest) returns (ListConsumersResponse) {
    option (google.api.http) = {
      get: "/v1/consumers"
    };
  }
}

message GetConsumerRequest{
  string id = 1;
  model.v1.RequestCluster cluster = 2;
}

message GetConsumerResponse{
  model.v1.Consumer item = 1;
}

message CreateConsumerRequest{
  model.v1.Consumer item = 1;
  model.v1.RequestCluster cluster = 2;
}

message CreateConsumerResponse{
  model.v1.Consumer item = 1;
}


message UpsertConsumerRequest{
  model.v1.Consumer item = 1;
  model.v1.RequestCluster cluster = 2;
}

message UpsertConsumerResponse{
  model.v1.Consumer item = 1;
}

message DeleteConsumerRequest{
  string id = 1;
  model.v1.RequestCluster cluster = 2;
}

message DeleteConsumerResponse{
}

message ListConsumersRequest{
  model.v1.RequestCluster cluster = 1;
}

message ListConsumersResponse{
  repeated model.v1.Consumer items = 1;
}